update to projects section

--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
                         <li><a href="#hero">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#tech">Tech</a></li>
+                        <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li>
-                            <!-- <div style="font-size: 20px; text-align: center;">
-                                <i class="fa-solid fa-moon"></i>
-                                <i class="fa-solid fa-sun"></i>
-                            </div> -->
-                        </li>
                     </ul>
                 </nav>
             </div>
@@ -75,23 +70,22 @@
                     </div>
                     <div class="right">
                         <h2>Hello, i'm Elvis and i'm a <span class="type-2"></span></h2>
-                        <p>I'm a self taught developer with a Bachelors degree in computer science from Ecole Superieure
-                            de
-                            Gestion et de Technologie (ESGT). I love coding and am passionate about it as i strive to be
+                        <p>I'm a self taught developer with a Bachelors degree in computer science.
+                            <!-- I love coding and am passionate about it as i strive to be
                             the
-                            best i can in the field.
+                            best i can in the field. -->
                         </p>
                         <p>
-                            I've always loved and had a connection with technology ever since i was little and have
+                            <!-- I've always loved and had a connection with technology ever since i was little and have
                             dedicated myself to the
                             area of frontend development to gain proficiency and also be able to solve web development
-                            problems.
+                            problems. -->
                             I study and work with technologies like
                             React, javascript,
                             tailwind css amonge others. I've also had contact with design tools like figma which is
                             essential
                             for interface design
-                            for projects. Currently, i'm still polishing my skill to become a better frontend developer.
+                            for projects. Feel free to contact me for my services.....
                         </p>
                     </div>
                 </div>
@@ -134,6 +128,79 @@
 
                     </p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <div class="project">
+                <h1>Projects</h1>
+                <div class="project-contain">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+
+                        <div class="demo">
+                            <img src="/img/demo.jpg" alt="" srcset="">
+                            <div class="info">
+                                <h1>
+
+                                    Twitter Clone
+                                </h1>
+                                <p>This is a clone of twitter with some limited functionality
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+
+                        <div class="demo">
+                            <img src="/img/dice.jpg" alt="" srcset="">
+                            <div class="info">
+                                <h1>
+
+                                    Dice Game
+                                </h1>
+                                <p>
+                                    A simple 2 player dice game with some sound effects!
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+
+                        <div class="demo">
+                            <img src="/img/anime.jpg" alt="" srcset="">
+                            <div class="info">
+                                <h1>
+
+                                    Anime Image Generator
+                                </h1>
+                                <p>
+                                    Select the type of image to generate and watch it produce images for you.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                    <!-- <a href="http://zoomer-map.netlify.app" target="_blank">
+
+                    </a> -->
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="demo">
+                            <img src="/img/zoomer.png" alt="" srcset="">
+                            <div class="info">
+                                <h1>
+
+                                    Zoomers Workout
+                                </h1>
+                                <p>
+                                    A map to pin point locations of where you had a running or cycling workout.
+                                </p>
+                            </div>
+                        </div>
+
+                    </a>
+                </div>
+                <a href="https://github.com/Elvivx" target="_blank" class="more">More...</a>
             </div>
         </div>
     </section>
