--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="about-text">
                     <div class="left">
-                        <img src="/img/IMG_5903.jpeg" alt="photo of elvis">
+                        <img src="/img/IMG_5903.jpg" alt="photo of elvis">
                     </div>
                     <div class="right">
                         <h2>Hello, i'm Elvis and i'm a <span class="type-2"></span></h2>
@@ -186,7 +186,7 @@
                     </a> -->
                     <a href="http://" target="_blank" rel="noopener noreferrer">
                         <div class="demo">
-                            <img src="/img/zoomer.png" alt="" srcset="">
+                            <img src="/img/zoomer.jpg" alt="" srcset="">
                             <div class="info">
                                 <h1>
 
