--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <div class="project">
                 <h1>Projects</h1>
                 <div class="project-contain">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <a href="https://elvivx-twitter.netlify.app" target="_blank">
 
                         <div class="demo">
-                            <img src="/img/demo.jpg" alt="" srcset="">
+                            <img src="/img/demo.jpg" alt="Twitter image">
                             <div class="info">
                                 <h1>
 
@@ -151,10 +151,10 @@
                             </div>
                         </div>
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <a href="https://elvivx-dice-game.netlify.app" target="_blank">
 
                         <div class="demo">
-                            <img src="/img/dice.jpg" alt="" srcset="">
+                            <img src="/img/dice.jpg" alt="Dice game image">
                             <div class="info">
                                 <h1>
 
@@ -166,10 +166,10 @@
                             </div>
                         </div>
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <a href="https://elvivxanime.netlify.app" target="_blank">
 
                         <div class="demo">
-                            <img src="/img/anime.jpg" alt="" srcset="">
+                            <img src="/img/anime.jpg" alt="Anime Image Generator">
                             <div class="info">
                                 <h1>
 
@@ -181,12 +181,10 @@
                             </div>
                         </div>
                     </a>
-                    <!-- <a href="http://zoomer-map.netlify.app" target="_blank">
-
-                    </a> -->
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    
+                    <a href="https://zoomer-map.netlify.app" target="_blank">
                         <div class="demo">
-                            <img src="/img/zoomer.jpg" alt="" srcset="">
+                            <img src="/img/zoomer.jpg" alt="Zoomer workout map>
                             <div class="info">
                                 <h1>
 
