--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="about-text">
                     <div class="left">
-                        <img src="/img/IMG_5903.jpg" alt="photo of elvis">
+                        <img src="/img/elvis dp.jpg" alt="photo of elvis">
                     </div>
                     <div class="right">
                         <h2>Hello, i'm Elvis and i'm a <span class="type-2"></span></h2>
