--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         I am well conversant in technologies ranging from <span class="i">HTML</span>, <span
                             class="i">CSS</span>, <span class="i">javascript</span> and also libaries which includes
                         technologies such as <span class="i">React</span>, <span class="i">Sass</span> and the likes of
-                        them. Also i am well knowledgeable in version control with <span class="i">git</span> and <span
-                            class="i">Github</span>.
+                        them. Also i am well knowledgeable in version control with <span class="i">git</span> and
+                        <span class="i">Github</span>.
 
                     </p>
                 </div>
@@ -181,10 +181,10 @@
                             </div>
                         </div>
                     </a>
-                    
+
                     <a href="https://zoomer-map.netlify.app" target="_blank">
                         <div class="demo">
-                            <img src="/img/zoomer.jpg" alt="Zoomer workout map>
+                            <img src="/img/zoomer.jpg" alt="Zoomer workout map">
                             <div class="info">
                                 <h1>
 
